--- a/public/libs/css/generalComponentsStyle.styl
+++ b/public/libs/css/generalComponentsStyle.styl
@@ -4,26 +4,32 @@ shadow-grey = #808080
 main-text-color = #212121
 add-text-color = #F2992E
 main-blue = #1d8dbf
+border-color = #BDC3C7
+active-input = #ECEFF1
+text-input = #34495E
+disable-input = #DADFE1
 button()
-    box-shadow 0px 0px 10px 0px grey
-    display flex
+    display block
     justify-content center
     align-items center
     margin-top  1%
     margin-bottom 1%
     border-radius 5px
-    background-color main-blue
+    font-family "Montserrat"
     color white !important
     padding 1%
     font-size 30px
-    height 50px
-    transition 0.2s
     cursor pointer
     border none
+    outline none
+    font-weight 700px
+    transition all 0.2s ease-out
     &:hover
-        box-shadow 0px 0px 0px 1px white, 0px 0px 0px 4px main-blue
+        transform translateY(-4px)
+        box-shadow 0 4px var(--box-shadow-color)
     &:active
-        box-shadow 0px 0px 0px 0.5px white, 0px 0px 0px 2px main-blue, 0px 0px 5px 0px white inset
+        transform translateY(0px)
+        box-shadow 0 0
 main-component()
     padding 1em
     // border 1px solid border-grey
