--- a/frontend/components/checkinsWrapper/checkinsWrapper.styl
+++ b/frontend/components/checkinsWrapper/checkinsWrapper.styl
@@ -35,12 +35,20 @@ section
             display block
             max-height 80vh
             overflow-y auto
+            .chlist
+                //- background-color: black
+               .checkin_day
+                    background-color #34495e
+                    color white
+                    text-align center
+                    border-radius 7px
             .checkinsList
                 padding-left 0
                 font-family 'Montserrat'
                 list-style-type: none
+
                 .checkin_title
-                    background-color #34495e
+                    background-color #67809f
                     color white
                     text-align center
                     border-radius 7px
