--- a/frontend/components/rightPanel/panel-pug.component.pug
+++ b/frontend/components/rightPanel/panel-pug.component.pug
@@ -2,4 +2,4 @@
 div#chlist(ng-repeat="day in rpanel.dailyCheckinsList  | limitTo:35:1 | filter: rpanel.dayFilter() | orderBy:'-' track by $index ") <h2 class="checkin_day">{{day.day.year}}/{{day.day.month}}/{{day.day.date}}</h2>
     ul.checkinsList(ng-repeat="checkin in day.checkins") <h2 class="checkin_title">{{checkin.question}}</h2>
         li(ng-repeat="answer in checkin.answers ") 
-             .answer <span class="user_name">{{answer.user.firstName + ' '+ answer.user.lastName }} (<span class="creation_date">{{answer.creationDate | date: "HH:mm"}}</span>)</span>  <span class="answer_text" ng-bind-html='answer.answer'></span>             
+             .answer <span class="user_name">{{answer.user.firstName + ' '+ answer.user.lastName }} (<span class="creation_date">{{answer.editedDate | date: "HH:mm"}}</span>)</span>  <span class="answer_text" ng-bind-html='answer.answer'></span>             
