--- a/frontend/components/checkins/checkinsAnswer-pug.component.pug
+++ b/frontend/components/checkins/checkinsAnswer-pug.component.pug
@@ -4,7 +4,7 @@
             .close-btn
                 a(ng-link='["Checkins List"]')
                     i.fa.fa-times.fa-2x
-        p question: {{checkinsAnswer.checkin.question}}
+        p question: {{checkinsAnswer.question}}
         input(ckeditor,type="text",name="text" , cols='30', rows='10',ng-model="checkinsAnswer.body",
         required,ng-minlength="10" ng-maxlength="300")
         hr
