Report button style fix

--- a/frontend/components/reports/reportsStyle.styl
+++ b/frontend/components/reports/reportsStyle.styl
@@ -98,26 +98,26 @@
             width -webkit-fit-content
             text-indent  2%
             cursor pointer
-            background-color add-text-color
+            background-color main-blue
             padding 1%
             margin 1%
             border-radius 5px
             box-shadow 0px 2px 3px 2px  border-grey
             font-size 18px
             font-family "Open Sans"
-            color black
+            color white
             span
                 text-indent 1%
                 position absolute
                 left 0
                 top 20%
-                color main-blue
+                color white
                 display inline-block
                 font-family "FontAwesome"
         .item-out-group
-            background-color add-text-color
+            background-color main-blue
             span
-                 color main-blue
+                 color white
         .item-out-group
             background-color border-grey
             span
