--- a/frontend/components/createProject/createProject.component.styl
+++ b/frontend/components/createProject/createProject.component.styl
@@ -3,66 +3,108 @@
 .createProject_wrapper
 	.main
 		min-width 400px
-		main-component()
 		h1
-			float left
-			display block
-		padding-left 5%
-		padding-right 5%
+			header-style()
+		main-component()
+		min-width 400px
+		display flex
+		flex-direction column
+		justify-content center
+		font-size 23px
+		text-align justify
+		form
+			margin 30px 0 1.5em 0
 		.cell
 			display flex
-			margin 10px 0
+			width 100%
 			flex-wrap wrap
 			font-family "Montserrat"
+			justify-content center
 			font-size 20px
+			margin-bottom 2em
 			.cellTitle
-				width 100%
-				margin-bottom 20px
-				*
+				width 80%
+				margin-bottom 5px
+				margin-right 0.5em
+				line-height 42px
+				h2
 					float left
-			.componentTitle
-				font-weight bold
+					margin 0
+			// ---------------------------------------------------------TITLE
 			.projTitle
 				width 100%
+				margin 50px 0
 				input
 					width 80%
-					border-radius 7px
+					border-radius 4px
 					border none
 					outline none
-					padding 8px
-					border 1px solid gray
-					color #333
-					font-family "Open Sans"
-					&:hover
-						box-shadow: 0 0 7px #3498db
+					border-bottom 4px solid border-color
+					background-color disable-input
+					color text-input
+					font-family "Montserrat"
+					text-align center
+					font-size 1.4em
+					&:focus
+						background-color active-input
+			// ---------------------------------------------------------------DESCRIPTION
 			.projDescription
 				width 100%
-				textarea
-					max-width 80%
-					min-width 80%
-					border-radius 7px
-					border none
+				position relative
+				margin 50px auto
+				.placeholder
+					position absolute
+					top 50%
+					left 50%
+					font-size 1.5em
+					pointer-events: none
+					color gray
+					font-family "Montserrat"
+					opacity 0.7
+					transform translateX(-50%) translateY(-50%)
+				.editDescription
+					width 80%
+					text-align left
+					padding 2em
+					font-size 0.9em
+					min-height 150px
+					margin 0 auto
+					font-family "Montserrat"
+					background-color disable-input
+					border-radius 12px
+					color text-input
+					border-bottom 4px solid border-color
 					outline none
-					padding 8px
-					border 1px solid gray
-					color #333
-					font-family "Open Sans"
-					&:hover
-						box-shadow: 0 0 7px #3498db
+					&:focus
+						background-color active-input
+			// ----------------------------------------------------------------------------DEADLINE
 			.projDeadline
 				width 100%
+				display flex
+				justify-content center
 				.deadline_wrapper
-					display inline-flex
+					width 30%
+					@media only screen  and (max-width : 1000px), screen and (max-device-width: 1000px)
+						width 50%
+					@media only screen  and (max-width : 480px), screen and (max-device-width: 480px)
+						width 80%
+					border-bottom 4px solid border-color
+					border-radius 4px
+					background-color disable-input
 					justify-content center
 					align-items center
-					padding 4px 10px
-					background-color white
-					border 1px solid gray
-					border-radius 7px
+					margin 50px 0
+					padding 9px 0
+					position relative
+					display flex
 					cursor pointer
-					user-select none
-					&:hover
-						box-shadow: 0 0 7px #3498db
+					& + div
+						.uib-datepicker-popup
+							.btn-group
+								.btn-danger.btn
+									display none
+					&.active
+							background-color active-input
 					.date
 						background-color none
 						border none
@@ -70,69 +112,112 @@
 						padding 8px
 						cursor pointer
 						user-select none
+						display inline-block
 						font-family "Montserrat"
-						min-width 25%
-					i
+					&>i
 						font-size 28px
-			.button
-				width 100%
+						position absolute
+						top 18px
+						right 14px
+			// --------------------------------------------------------------------------PARTICIPANTS
+			.participants
+				width 80%
 				display flex
-				justify-content center
-				align-items center
-				.save
-					button()
-					margin-top 30px
-					padding 0 45px
-			.addUser
-				display flex
-				align-items center
-				justify-content center
-				text-decoration none
-				lable
-					font-family "Open Sans"
-					font-size 18px
-					margin-left 5px
-					line-height 24px
-				i
-					font-size 24px
-			.projParticipants
-				width 100%
-				display block-flex
+				margin 1em 0
+				align-items flex-start
+				align-content flex-start
 				flex-wrap wrap
-				justify-content center
-				align-items center
-				transition all 0.5s ease-out
-				select
-					max-width 80%
-					min-width 80%
-					border-radius 7px
+				min-height 150px
+				margin-top 25px
+				.btn-group.ng-enter,.btn-group.ng-leave
+					-webkit-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-moz-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-ms-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-o-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					position: relative;
+					display: inline-flex;
+				.btn-group.ng-enter,.btn-group.ng-leave.ng-leave-active
+					opacity 1
+					span
+						text-overflow clip
+						max-width 0px
+					.participant
+						border-bottom 0px solid border-color
+						transform translateY(8px)
+				.btn-group.ng-leave,.btn-group.ng-enter.ng-enter-active
+					opacity 1
+					span
+						text-overflow clip
+						max-width 360px
+					.participant
+						border-bottom 4px solid border-color
+						transform translateY(0)
+				.participant 
+					background-color disable-input
 					border none
-					outline none
-					padding 8px
-					border 1px solid gray
-					color #333
-					font-family "Open Sans"
-					&:hover
-						box-shadow: 0 0 7px #3498db
-				.participantCell
-					display flex
+					border-bottom 4px solid border-color
+					border-radius 4px
+					color text-input
+					max-width 360px
+					padding 7px 18px
+					padding-right 12px
+					text-align center
+					text-decoration none
+					display inline-flex
 					justify-content center
 					align-items center
-					margin-top 10px
-					.participant_wrapper
-						background-color #1d8dbf
-						display inline-flex
-						padding 10px
-						border-radius 8px
-						font-family "Open Sans"
-						.participantTitle
-							color white
-							margin-right 10px
-						.deleteButton
-							i
-								font-size 25px
-								transition all 0.3s ease-out;
-								cursor pointer
-								&:hover
-									color white
+					font-size 0.8em
+					margin 10px 7px
+					cursor pointer
+					-webkit-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-moz-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-ms-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-o-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					span
+						display block
+						white-space nowrap
+						overflow hidden
+						text-overflow ellipsis
+						-webkit-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+						-moz-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+						-ms-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+						-o-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+						transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					i
+						margin-left 10px
+						font-size 1.2em
+					&:hover
+						border-bottom 8px solid border-color
+						transform translateY(-2px)
+						margin 8px 7px
+						i
+							color #e57373
+				.add
+					padding-right 18px
+					padding-left 12px
+					height auto
+					i
+						margin-right 10px
+						color #4DB6AC
+					&:hover
+						i
+							color #4DB6AC
+							
+			// -----------------------------------------------------------------------------SAVEBUTTON
+
+			.button
+				display flex
+				justify-content center
+				align-items center
+				padding 50px 0
+				.save
+					button()
+					font-family "Montserrat"
+					font-size 24px
+					padding 15px 100px
+					--box-shadow-color #004D40
+					background-color #2e8f35
+
 							
