Task comments and fix reload page at comments

--- a/frontend/components/comments/messageComments.template.pug
+++ b/frontend/components/comments/messageComments.template.pug
@@ -13,7 +13,7 @@
                 |                         
                 .col-xs-9
                   .row
-                    span.col-xs-12.user-name {{comment.author.firstName}} {{comment.author.secondName}}                            
+                    span.col-xs-12.user-name {{comment.author.firstName}} {{comment.author.lastName}}                            
                   .row
                     p.col-xs-12.comment
                       | {{comment.description}}
