--- a/frontend/components/comments/tasksComments.template.pug
+++ b/frontend/components/comments/tasksComments.template.pug
@@ -4,7 +4,7 @@
           .row.comments-header
             span.col-xs-11 Comments
             |                     
-            .middle-xs.col-xs-1.fa.fa-close.button(ng-link='["Events List"]')
+            .middle-xs.col-xs-1.fa.fa-close.button(ng-link='["TasksList"]')
           |                 
           .row.comments-body
             ul.col-xs-12
