--- a/frontend/components/messageBoard/messageBoard.pug
+++ b/frontend/components/messageBoard/messageBoard.pug
@@ -1,26 +1,26 @@
 .messageBoard-wrapper
-  div.header
-    .wrapper_lable
-        h1 Message Board
-    .wrapper_createButton.row.center-xs
-        button(ng-link='["PostMessage"]') Post message
-  .message-block(ng-repeat="message in msgBoard.messages track by $index")
-      .user-info
-          header
-              img.img(src="./img/person.gif")
-              h3 {{message.author.firstName}} {{message.author.lastName}}
-      article.message-info
-          a(ng-if="msgBoard.isAuthor(message) || msgBoard.isAdmin")
-            h3(ng-link='["EditMessage",{id:message._id}]') {{message.title}}
-          h3(ng-if="!msgBoard.isAuthor(message) && !msgBoard.isAdmin") {{message.title}}
-          .main
-            p(ng-if = "!message.isBigText",ng-bind-html="message.description")
-            p(ng-if = "message.isBigText",ng-bind-html="message.firstPart",id = "firstPart")
-            p(ng-if = "message.showFull",ng-bind-html="message.secondPart",id = "secondPart")
-            a(ng-if="!message.showFull && message.description.length > 300",ng-click="msgBoard.showText($index)") ...
-          hr
-          a(ng-click="msgBoard.hideText($index)",ng-if="message.showFull") Hide
-          p.post-date {{message.date | date:"dd/MM/yyyy 'at' h:mma"}}
-      .use-button
-          div.fa.fa-files-o(ng-link='["File"]')
-          div.fa.fa-comments-o(ng-link='["Message comments",{id:message._id}]')
+	h1 Message Board
+	.header
+		.wrapper_createButton.row.center-xs
+				button(ng-link='["PostMessage"]') Post message
+	.message-block(ng-repeat="message in msgBoard.messages | orderBy: '-date' track by $index")
+			.user-info
+					.header
+							.img
+								img(src="./img/person.gif")
+							.createinfo
+								h3 {{message.author.firstName}} {{message.author.lastName}}
+								p.post-date {{message.date | date:"dd/MM/yy hh:mm"}}
+			.message-info
+					a(ng-if="msgBoard.isAuthor(message) || msgBoard.isAdmin")
+						h3(ng-link='["EditMessage",{id:message._id}]') {{message.title}}
+					h3(ng-if="!msgBoard.isAuthor(message) && !msgBoard.isAdmin") {{message.title}}
+					.main
+						p(ng-if = "!message.isBigText",ng-bind-html="message.description")
+						p(ng-if = "message.isBigText",ng-bind-html="message.firstPart",id = "firstPart")
+						p(ng-if = "message.showFull",ng-bind-html="message.secondPart",id = "secondPart")
+						a(ng-if="!message.showFull && message.description.length > 300",ng-click="msgBoard.showText($index)") ...
+					a.clicktohide(ng-click="msgBoard.hideText($index)",ng-if="message.showFull") Hide
+			.use-button
+					i.fa.fa-files-o(ng-link='["File"]')
+					i.fa.fa-comments-o(ng-link='["Message comments",{id:message._id}]')
