--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -1,145 +1,130 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
 .messageBoard-wrapper
-    text-align center
-    background-color #F5F5F5
-    width 80%
-    margin-left 10%
-    margin-bottom 2%
-    box-shadow 0 5px 20px 2px #808080
-    border 1px solid #ADADAD
-    border-radius 10px
-    div.header
-        font-size 1.6em
+    main-component()
+    min-width 400px
+    width 100%
+    text-align justify
+    padding 1em
+// -----------------------------------------------------------------------------HEADER
+    h1
+        header-style()
+    .header
         margin-bottom 50px
-        .wrapper_lable
-            display flex
-            align-items center
-            justify-content center
-            flex-wrap wrap
-            color #212121
-            font-size 1.8em
-            font-family "Montserrat"
-            h1
-                width 100%
-                margin-bottom 0
-            &:after
-                content ''
-                height 1px
-                margin-top 0.3em
-                width 80%
-                display block
-                background-image -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-                background-image    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-                background-image     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-                background-image      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
         .wrapper_createButton
-            margin 30px 0
+            margin 5px 0
             button
                 button()
                 font-family "Montserrat"
-                line-height 32.406px
-                font-size 1.2em
-                border none
-                outline none
+                font-size 24px
+                padding 15px 50px
+                --box-shadow-color #004D40
+                background-color #2e8f35
+                
+// ----------------------------------------------------------------------MESSAGE BLOCK
 
     .message-block
-        margin 0 5% 5% 5%
+        margin 25px auto
         padding-left 1%
         padding-right 1%
-        width 90%
-        display flex
-        align-items stretch
+        padding-top 1px
+        padding-bottom 20px
+        background-color disable-input
+        border-bottom 4px solid border-color
+        border-radius 8px
+        position relative
+        width 80%
+        &:hover
+            .use-button
+                opacity 1
+        @media only screen  and (max-width : 1000px), screen and (max-device-width: 1000px)
+            width 90%
+        @media only screen  and (max-width : 480px), screen and (max-device-width: 480px)
+            width 100%
+// --------------------------------------------------------------------------------------------------USERINFO
         .user-info
-            border 1px solid #260595
-            border-top-left-radius 20px
-            border-bottom-left-radius 20px
-            background-color #1D8DBF
-            color #212121
-            width 20%
+            margin-bottom 10px
             display flex
-            justify-content center
-            align-items center
-            header
-                -moz-user-select -moz-none
-                -o-user-select none
-                -khtml-user-select none
-                -webkit-user-select none
-                user-select none
-                padding 10% 2% 10% 2%
+            justify-content flex-start
+            padding 1em
+            .header
                 display flex
-                justify-content center
+                border-radius 4px
                 align-items center
-                flex-direction column
+                position relative
+                width 100%
+                margin 0
                 .img
-                    width 64px
-                h3
-                    word-wrap break-word
-                    width 120px
-                    font-size 1.4em
-                    padding-top 15%
-                    margin-top 0
-                    margin-bottom 0
-                    text-align center
+                    width 2.5em
+                    min-width 2.5em
+                    height 2.5em
+                    border-radius 1.25em
+                    display inline-block
+                    overflow hidden
+                    margin-right 12px
+                    img
+                        width 2.5em
+                        min-width 2.5em
+                        height 2.5em
+            .createinfo
+                    h3
+                        word-wrap break-word
+                        display inline-block
+                        margin 0
+                        font-size 1.15em
+                        color #616161
+                        font-family "Montserrat"
+                    .post-date
+                        display block
+                        margin 0
+                        color #616161
+                        font-size 1.0em
+                            
+                        
+// ---------------------------------------------------------------------------MESSAGE info
         .message-info
-            border-top 1px solid #ADADAD
-            border-bottom 1px solid #ADADAD
-            background-color #F5F5F5
-            width 65%
-            padding 3% 5% 3% 5%
-            font-size 1.2em
-            text-align justify
-            color #212121
-            font-family "Open Sans"
-            h3
-                text-align center
-                font-size 1.8em
-                margin-top 0
-                margin-bottom 4%
-                font-family "Montserrat"
-            .post-date
-                color #F2992E
+            margin-top 7px
+            padding 1em
+            .clicktohide
+                margin-top 15px
+                font-size 1.3em
+                width 100%
                 text-align right
-                font-weight bold
-                margin-bottom 0
-                margin-top 5%
-                word-spacing: 10px;
+            h3
+                text-align left
+                font-size 1.5em
+                margin-top 0
+                margin-bottom 20px
+                overflow hidden
+                text-over
+                font-family "Montserrat"
             a
-                display inline
+                display inline-block
+                &:hover
+                    text-decoration none
+                    cursor pointer
             .main
                 p
                     display inline
+                    font-size 1.05em
+                    
         .use-button
-            border-top-right-radius 20px
-            border-bottom-right-radius 20px
-            border 1px solid #ADADAD
-            background-color #F5F5F5
-            width 15%
+            position absolute
+            padding 1em
+            top 0px
+            right 10px
             display flex
-            flex-direction column
-            justify-content center
-            align-items stretch
-            padding-left 2%
-            padding-right 2%
-            div
-                -moz-user-select -moz-none
-                -o-user-select none
-                -khtml-user-select none
-                -webkit-user-select none
-                user-select none
-                display flex
-                margin-top 15%
-                margin-bottom 15%
-                justify-content center
-                align-items center
-                border-radius 5px
-                background-color #1D8DBF
-                color WHITE
-                padding 1% 3% 1% 3%
-                font-size 30px
-                height 50px
-                transition 0.2s
+            opacity 0
+            transition all 0.2s ease-out 0.2s
+            justify-content flex-end
+            margin 0
+            i
+                font-size 1.8em
+                margin-right 10px
                 cursor pointer
-                &:active
-                    box-shadow 0 0 0 0.5px WHITE, 0 0 0 2px main-blue, 0 0 5px 0 WHITE inset
+                border-radius 4px
+                color #424242
+                // background-color #ECF0F1
+                padding 6px
+                transition color 0.2s ease-out
                 &:hover
-                    box-shadow 0 0 0 1px white, 0 0 0 4px #1D8DBF
+                    color #1d8dbf
